cka-training-master/24-ingress/ingress-rule2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          service:
            name: secondapp
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: thirdpage.org
    http:
      paths:
      - backend:
          service:
            name: thirdpage
            port:
              number: 80
        path: /
        pathType: Prefix
